preapare to deploy

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr" class="text-[14px] phone:text-[10px] font-inter rtl:font-fustat">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="./assets/logos/logoGreenNoBg.ico" />
+    <link rel="icon" type="image/ico" href="/fa3ilkhairv2/assets/logos/logoGreenNoBg.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fa3il Khair</title>
   </head>
